--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.1",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
